# scraper-service

./: .env.example  .gitignore  Containerfile  README.md  config.py  llm.py  main.py  models.py  pyproject.toml  scraper-service.container
.claude/: settings.local.json
.github/workflows/: deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-critical-fixes/: 01-01-PLAN.md  01-02-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-mercadona-scraper/: 02-01-PLAN.md  02-CONTEXT.md  02-RESEARCH.md
scrapers/: __init__.py  base.py
scrapers/realestate/: idealista.py
scrapers/supermarkets/: bonpreu.py  lidl.py
tests/: smoke_test.py  test_api.py  test_bonpreu.py  test_config.py  test_idealista.py  test_lidl.py  test_llm.py  test_models.py
tests/fixtures/: bonpreu_markdown.txt
