[project]
name = "scraper-service"
version = "0.1.0"
description = "Generic web scraping service with FastAPI, Crawl4AI, and LLM extraction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "crawl4ai>=0.4.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
